--- a/app/src/main/res/layout/fragment_singer3.xml
+++ b/app/src/main/res/layout/fragment_singer3.xml
@@ -11,8 +11,22 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Singer3"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_margin="10dp"
+            android:background="@color/black"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/gain_sing_list"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/singerRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="90dp"
+            android:layout_marginBottom="100dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
